--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,11 @@ android {
 }
 
 dependencies {
+    def nav_version = "2.4.1"
 
+    // Java language implementation
+    implementation "androidx.navigation:navigation-fragment:$nav_version"
+    implementation "androidx.navigation:navigation-ui:$nav_version"
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
     implementation 'com.google.android.material:material:1.5.0'
