--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.fragment:fragment:1.3.5'
     def nav_version = "2.4.1"
 
     // Java language implementation
