--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -29,6 +30,8 @@ android {
 
 dependencies {
     implementation 'androidx.fragment:fragment:1.3.5'
+    implementation 'com.google.firebase:firebase-auth:21.0.3@aar'
+    implementation 'com.google.firebase:firebase-database:20.0.4'
     def nav_version = "2.4.1"
 
     // Java language implementation
