--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,8 +30,10 @@ android {
 
 dependencies {
     implementation 'androidx.fragment:fragment:1.3.5'
-    implementation 'com.google.firebase:firebase-auth:21.0.3@aar'
+    implementation 'com.google.firebase:firebase-auth:21.0.3'
     implementation 'com.google.firebase:firebase-database:20.0.4'
+    implementation 'com.google.firebase:firebase-analytics:20.1.2'
+    implementation 'com.google.firebase:firebase-firestore:24.1.1'
     def nav_version = "2.4.1"
 
     // Java language implementation
