fixed bug and Exception

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,10 +8,11 @@ android {
 
     defaultConfig {
         applicationId "com.example.minimental"
-        minSdk 19
+        minSdk 21
         targetSdk 31
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
@@ -35,6 +36,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics:20.1.2'
     implementation 'com.google.firebase:firebase-firestore:24.1.1'
     implementation 'com.google.firebase:firebase-storage:20.0.1'
+
+
 
     def nav_version = "2.4.1"
 
