Fix adding picturs

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,12 +17,16 @@
         <activity
             android:name=".MainActivity"
             android:exported="true">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".fragments.ImageActivity"
+            android:exported="true"></activity>
         <service android:name=".Services.MediaPlayerService"/>
         <meta-data
             android:name="preloaded_fonts"
