--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore:24.1.1'
     implementation 'com.google.firebase:firebase-storage:20.0.1'
     implementation 'com.github.bumptech.glide:glide:4.13.0'
+    implementation 'com.getkeepsafe.taptargetview:taptargetview:1.13.3'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
 
 
